--- a/ui/app/package.json
+++ b/ui/app/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "d3": "^7.8.4",
+    "ideogram": "^1.41.0",
     "material-react-table": "^1.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
