--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ gene_trends/__pycache__
 gene_trends/views/__pycache__/*
 gene_trends/citations/__pycache__
 pubmed_citations
+gene_trends/.DS_Store
+.DS_Store
