--- a/ui/app/package.json
+++ b/ui/app/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
@@ -53,5 +54,4 @@
       "last 1 safari version"
     ]
   }
-
 }
